@@ -2,7 +2,7 @@ name                = Catalyst-Plugin-SmartURI
 author              = Rafael Kitover <rkitover@cpan.org>
 license             = Perl_5
 copyright_holder    = Rafael Kitover
-copyright_year      = 2013
+copyright_year      = 2015
 
 [@AVAR]
 dist            = Catalyst-Plugin-SmartURI
