@@ -1,6 +1,7 @@
 Revision history for Catalyst-Plugin-SmartURI
 
 {{$NEXT}}
+    - fix infinite recursion on undef $req->uri #1
 
 0.039 2014-01-11 15:55:01
     - remove Class::MOP::load_class RT#90916
